use fix steps clipped

--- a/docs-website/src/app.css
+++ b/docs-website/src/app.css
@@ -104,3 +104,8 @@ mark {
     content-visibility: auto;
     /* contain-intrinsic-size: auto 500px; */
 }
+
+
+.fd-steps {
+    content-visibility: visible;
+}
